# ChangeLog for media-sound/frescobaldi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/frescobaldi/ChangeLog,v 1.28 2014/10/27 05:44:48 ssuominen Exp $

  27 Oct 2014; Samuli Suominen <ssuominen@gentoo.org>
  -frescobaldi-2.0.13.ebuild, -frescobaldi-2.0.14.ebuild,
  -frescobaldi-2.0.15.ebuild:
  old

*frescobaldi-2.0.16 (20 Jun 2014)

  20 Jun 2014; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.16.ebuild:
  Version bump.

*frescobaldi-2.0.15 (12 Mar 2014)

  12 Mar 2014; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.15.ebuild:
  Version bump.

  06 Mar 2014; Tim Harder <radhermit@gentoo.org> -frescobaldi-2.0.9.ebuild,
  -frescobaldi-2.0.10.ebuild, -frescobaldi-2.0.11.ebuild,
  -frescobaldi-2.0.12.ebuild:
  Remove old.

*frescobaldi-2.0.14 (06 Mar 2014)

  06 Mar 2014; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.14.ebuild:
  Version bump.

*frescobaldi-2.0.13 (01 Jan 2014)

  01 Jan 2014; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.13.ebuild:
  Version bump.

*frescobaldi-2.0.12 (27 Dec 2013)

  27 Dec 2013; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.12.ebuild:
  Version bump.

*frescobaldi-2.0.11 (17 Oct 2013)

  17 Oct 2013; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.11.ebuild:
  Version bump.

  14 May 2013; Tim Harder <radhermit@gentoo.org> -frescobaldi-2.0.6.ebuild,
  -frescobaldi-2.0.7.ebuild, -frescobaldi-2.0.8.ebuild:
  Remove old.

*frescobaldi-2.0.10 (14 May 2013)

  14 May 2013; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.10.ebuild:
  Version bump.

*frescobaldi-2.0.9 (23 Mar 2013)

  23 Mar 2013; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.9.ebuild:
  Version bump, update to distutils-r1.

  15 Sep 2012; Tim Harder <radhermit@gentoo.org> -frescobaldi-2.0.4.ebuild:
  Remove old.

*frescobaldi-2.0.8 (15 Sep 2012)

  15 Sep 2012; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.8.ebuild:
  Version bump.
