@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST frescobaldi-2.0.16.tar.gz 3861027 SHA256 d8e89a662da45ae6c514365a4eb6895419f8058014f5393041988a55f05eea8a SHA512 7f04b84ec73ee84094ef8c11ef546a111b3c795dff9611a0627180b6509103c7505e5799a3ad0dd8d4d54dca2596f34835dca0018f78fe55966665c5eb14f3ab WHIRLPOOL 3c1d2f9d79ab04536664176d834014d5daab73d115961913b40c247dfe142cbf95761e44043ccfd914dc6cf64eb307d29fba0cb128afd44c3c345e1cb6edcd9a
+DIST frescobaldi-2.18.tar.gz 4075233 SHA256 6531a6425a0b0a471fb0845098e9c890e59d6379636ed79b4512a48599327d4b SHA512 31c0f3d96e26f2b2a8383b25f56e89493f115bc7a60478a05be8c6f8e7f9189592ea106a366c999293e96c7860811cfe7505906f8f625a54c3ad58a9a428700a WHIRLPOOL de89589068258a421491b312f4928ed787921bf4b1f982ed31bd881f9ed59b7990cc2f2ccfb47a9cd054a19d545ae31a746dcb000267f37701a1552517be59a1
 EBUILD frescobaldi-2.0.16.ebuild 909 SHA256 9be837e73bbc7e862079e679196f43bd74e023e6f4a3bdf5d4e63dc4eeb15777 SHA512 ce1005fe0373a9ef853edba5504f0fea6c0bd6a1ed6abd28a5593f1df51836bb5397d1459ebdf9858da7d84acc331df65f231dc0f48f7736c5875f895ea248a2 WHIRLPOOL f0725aabfcf2aad372343f6200c6b733189ab5808ebcb01802a70d51b7fbf1247ff6828aab5e27aa7041497d9fbc318629cd517e16314e47bfc17e891ccf5d74
-MISC ChangeLog 4113 SHA256 63a8b3d62472a4c2c8258415a4a1bfa477b3fd3c209cb7edc8b417dc1bc2e918 SHA512 074e89c50b7d937222e63fe02ffeb83f1a1b94e7789b6376792231eed893df0721cf59f5fab1b4ccb823058b975552ef84577f67e57c4d09db865d554b84bf51 WHIRLPOOL 06c7ecda229b554da698a6f1da5b426ec241f2667c393401795c40193d9c792fdae792c0178e80f6a6ed951f72dc29417a3d886ba68a1bda2c822ebca52fe8f6
+EBUILD frescobaldi-2.18.ebuild 1106 SHA256 a116e2b8c8f0829a3608b51e7205e15ec11e37e667ec4557e6e269b8ba9c3daf SHA512 0c8286d92b666131f14f4d4e3193ad965f3dd6df2aa339c2a8e159d8df3594343647cc5f263dd4a16666602c2f0095001b8b80ad1579c9a4707670c8385e4a0a WHIRLPOOL fe003acbf0c20787765a3c64b9e3fe8585ca87170b709254a4188ee95b134604aea8c9e1c15ec8010ed6cdfbe351621c538bc2222a6cc649b83956a8857b2720
+MISC ChangeLog 4245 SHA256 d8b6f6de45ee5e7574a190403365efbf36200969a1af84d810377f1834b2cfb2 SHA512 c0a153258070800f13e33c04a1366960fc9804a56c0d303b3af1689b99a6ded115d06cf0442a9c54b60c75bd068ac2c9491352a3a4170ad1aa0ead2768ea4b13 WHIRLPOOL 8713678bc63c4621a27c07bb5964c7619ffac3ce8b5cf005c3ce2e52244ddbf868d2f388f6f77c5250f69ae3730f470caef5f8a0c73dd5c998cb59df626258bd
 MISC metadata.xml 278 SHA256 5f5939f0ff55f6e8c9220b7de246d84d110b7690fc9b40f715364823abd531fa SHA512 8945ace7d7b61a38ae07527f8e1c927dc5fd02d342e879123660a67178000d8793778a37baebb8b381549c11783577d479eaba642890aeb1313a3119e7a55b2f WHIRLPOOL 0ae75fa5bf43a78c990760ce599edcd2e9a484bd2c05ef63b0143cdbf52d3ed9ed750cb685f5b3136a3b6fc13a960767eb14d572436b6d97d2bc26792aef2f81
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQEcBAEBCAAGBQJUTdu5AAoJEEdUh39IaPFNwbQH/3N5g12LFv1goQLv5snryR2E
-pPlgHOk9LRfo0UoH4cilA2nyxO75NJEG4hf7hIn371dyvqfWQzCknafR4NMjHDzV
-XT6pei/rC74G6GfTzz9dqz5xIiPSZJCF2lGHktz7q8H4VG537HeOYxviwUQivzt4
-xgRBYqe9Ge6toHxVzBs9jSV7LjxKeuzqW10W0C3jrQqf6qmg52RH26TBixEBvOzl
-njXPBdl0IT1AlBzlbZHgOWjk7S/7Bc0ukVDKtuCKV3jqKlLdrfb7QHPCsLGreEoE
-6AaWRRHzcYVTFxtD1kIERY3BGbjNnmpe42gjQ4VX2l6y0fTljOA+4MlEBf6H7YE=
-=zuVp
+iKYEAREIAGYFAlVcEsRfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDdDQUM1OUY0ODkzMERBREU1NUQ1RjJBRkIy
+OEVDMjEzQjgwNzJCMEQACgkQso7CE7gHKw0PKgCfc1h4fdiOEDw6/mwMXWbAXw+S
+ob0Ani0FI2MCsNdL3h33A34j9mOnqfgC
+=nr1u
 -----END PGP SIGNATURE-----
